--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "fso-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts"
   },
@@ -11,7 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "ts-node": "^10.8.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
